Ensure loaders and logo have height set. Avoids them looking squished

--- a/src/styles/components/_domain_list.sass
+++ b/src/styles/components/_domain_list.sass
@@ -4,3 +4,4 @@
     margin: 25px auto
     display: block
     width: 25px
+    height: 25px
