--- a/src/styles/components/_progress_button.sass
+++ b/src/styles/components/_progress_button.sass
@@ -24,6 +24,7 @@
     position: relative
     vertical-align: middle
     width: 22px
+    height: 22px
     margin: 0px
     margin-right: 10px
     margin-left: 10px
